# interview-prep-gpt

./: .gitignore  README.md
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: interviews.py  speech.py
backend/app/core/interview/: feedback_evaluator.py  question_generator.py
backend/app/core/language_models/: llm_config.py  prompt_templates.py
backend/app/core/speech/: speech_to_text.py
backend/tests/: test_generate_questions.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  index.css
frontend/src/components/AudioRecorder/: AudioRecorder.js
frontend/src/components/Feedback/: FeedbackDisplay.js
frontend/src/components/InterviewSimulation/: InterviewSimulator.js
frontend/src/services/: api.js
